winner section updated

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -260,6 +260,78 @@
   </div>
 </section>
   -->
+
+  <section class="win" id="winner">
+
+    <div class="container">
+      <div class="heading">
+        <h2>Our Winners</h2>
+      </div>
+
+      <div class="main-box inner flex">
+        <div class="winners-wrap">
+           <div class="winners-member text-center">
+            <div class="winners-img">
+              <img src="./asset/img/winners-img/winner1.jpg" alt="">
+              <div class="overlay">
+                <div class="winners-details text-center" >
+                    <p>
+                      “It was a wonderful experience, I got to know and learn various new things.I am looking forward to many more events with the E-cell in the future”
+                    </p>
+
+                </div>
+              </div>
+            </div>
+            <h6 class="winners-title">Dishank Patel</h6>
+          <span class="award">People Choice Award & Taste and Presentation Award</span>
+        </div> 
+        </div>
+
+        <div class="winners-wrap">
+          <div class="winners-member text-center">
+           <div class="winners-img">
+             <img src="./asset/img/winners-img/winnner2.jpeg" alt="">
+             <div class="overlay">
+               <div class="winners-details text-center" >
+                   <p>
+                    “My experience in food fiesta was very interesting. I made great profit and my stall was the highest selling stall. I would request the college to give students more such opportunities that promote business skills to students.”
+                   </p>
+
+               </div>
+             </div>
+           </div>
+           <h6 class="winners-title">Ainul Alam</h6>
+         <span class="award"><br> Highest sale Award </span>
+       </div> 
+       </div>
+
+
+       <div class="winners-wrap">
+        <div class="winners-member text-center">
+         <div class="winners-img">
+           <img src="./asset/img/winners-img/winner3.jpeg" alt="">
+           <div class="overlay">
+             <div class="winners-details text-center" >
+                 <p>
+                  “I participated in Food Fiesta and it was a great experience. The stall arrangement was great. All the volunteers were very helpful and also very enthusiastic. There was a variety of food and drinks. It was a great experience and wish to participate next year as well!”
+                 </p>
+
+             </div>
+           </div>
+         </div>
+         <h6 class="winners-title">Abdul Ujjainwala</h6>
+       <span class="award"> <br>Innovative Pitch to Sell Award </span>
+     </div> 
+     </div>
+
+      </div>
+    </div>
+
+
+  </section>
+
+
+  <!--
   <section class="Winner" id="Winners">
 
     <h1 class="title">Our Winners</h1>
@@ -312,7 +384,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
 <section class="Gallery" id="Gallery">
   <h1 class="main-heading">Gallery</h1>
