--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -49,7 +49,7 @@
       <li><a href="#about" >About</a></li>
       <li><a href="#spon">Sponsors</a></li>
       <li><a href="#jury">Jury</a></li>
-      <li><a href="#Winners">Winners</a></li>
+      <li><a href="#win">Winners</a></li>
       <li><a href="#Gallery">Gallery</a></li>
     </ul>
 
@@ -261,7 +261,7 @@
 </section>
   -->
 
-  <section class="win" id="winner">
+  <section class="win" id="win">
 
     <div class="container">
       <div class="heading">
