removed form and uploaded separately

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     <h1>Excited to Join Us?</h1>
     
                     <p></p>
-                    <a  href='https://uptwocat.com/'>
+                    <a  href='https://register.ecellsakec.in'>
                     <button class="button button2"><strong style="font-size: 30px; font-family: poppins; ">JOIN US</strong></button>
                 </a>
                     <!--<p class="read-more ">
