--- a/faq/index.html
+++ b/faq/index.html
@@ -31,10 +31,17 @@
     </div>
    
     <ul class="links">
-      <li><a href="../index.html">Home</a></li>
-      
+      <li> <a href="../index.html#home">Home </a> </li>
+      <li> <a href="../events/index.html">Events </a> </li>
+      <li> <a href="../index.html#about">About Us </a> </li>
+      <li> <a href="../index.html#objective">Objectives</a> </li>
+      <li> <a href="../index.html#testimony">Testimony</a> </li>
+      <li> <a href="../index.html#contactus">Contact Us </a> </li>
+      <!-- <li> <a href="../team/index.html">Our Team</a> </li> -->
 
-    </ul>
+
+
+  </ul>
     <label for="nav-toggle" class="icon-burger">
       <div class="line"></div>
       <div class="line"></div>
