--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -68,7 +68,8 @@
             <div class="home-wrapper">
                 <!-- Hero Image -->
                 <div class="hero-img">
-                    <img src="./src/assets/svg/Project-Pillar-Logo.svg" alt="" height="100%" width="100%">
+                    <img src="./src/assets/icon/project pillar logo final black with name.png" alt="" height="100%"
+                        width="75%">
                 </div>
                 <!-- Count Down to Event  -->
                 <div class="counter-wrapper">
