home page join us changes

--- a/index.html
+++ b/index.html
@@ -252,8 +252,9 @@
        For Students
     </h1>
             <div class="blog-card">
-                <div class="meta">
-                    <div class="photo" style="background-image: url('./src/assets/images/reg.png');"></div>
+                <div class="photo-cont">
+             
+                        <img src="./src/assets/images/reg.png" alt="" width="100%" height="100%" >
                     <!--<ul class="details">
                     <li class="author"><a href="#">John Doe</a></li>
                     <li class="date">Aug. 24, 2015</li>
@@ -271,13 +272,8 @@
                     <h3>Excited to Join Us?</h3>
     
                     <p></p>
-<<<<<<< Updated upstream
                     <a  href='https://register.ecellsakec.in'>
-                    <button class="button button2"><strong style="font-size: 30px; font-family: poppins; ">JOIN US</strong></button>
-=======
-                    <a  href='https://uptwocat.com/'>
-                    <button class="button button2"><strong style="font-size: 20px; font-family: poppins; ">JOIN US</strong></button>
->>>>>>> Stashed changes
+                    <button class="button" style="color: #000;" >JOIN US</button>
                 </a>
                 </div>
             </div>
