ff images updated

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -272,7 +272,7 @@
         <div class="winners-wrap">
            <div class="winners-member text-center">
             <div class="winners-img">
-              <img src="./asset/img/winners-img/winner1.jpg" alt="">
+              <img src="./asset/img/winners-img/winner1.png" alt="">
               <div class="overlay">
                 <div class="winners-details text-center" >
                     <p>
@@ -290,7 +290,7 @@
         <div class="winners-wrap">
           <div class="winners-member text-center">
            <div class="winners-img">
-             <img src="./asset/img/winners-img/winnner2.jpeg" alt="">
+             <img src="./asset/img/winners-img/winnner2.png" alt="">
              <div class="overlay">
                <div class="winners-details text-center" >
                    <p>
@@ -309,7 +309,7 @@
        <div class="winners-wrap">
         <div class="winners-member text-center">
          <div class="winners-img">
-           <img src="./asset/img/winners-img/winner3.jpeg" alt="">
+           <img src="./asset/img/winners-img/winner3.png" alt="">
            <div class="overlay">
              <div class="winners-details text-center" >
                  <p>
