ff winner section

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -263,7 +263,7 @@
 
   <section class="win" id="win">
 
-    <div class="container">
+    <div class="contain">
       <div class="heading">
         <h2>Our Winners</h2>
       </div>
@@ -283,7 +283,8 @@
               </div>
             </div>
             <h6 class="winners-title">Dishank Patel</h6>
-          <span class="award">People Choice Award & Taste and Presentation Award</span>
+          <p class="award">People Choice Award </p>
+          <p class="award">Taste and Presentation Award</p>
         </div> 
         </div>
 
@@ -301,7 +302,7 @@
              </div>
            </div>
            <h6 class="winners-title">Ainul Alam</h6>
-         <span class="award"><br> Highest sale Award </span>
+         <span class="award">Highest sale Award </span>
        </div> 
        </div>
 
@@ -320,7 +321,7 @@
            </div>
          </div>
          <h6 class="winners-title">Abdul Ujjainwala</h6>
-       <span class="award"> <br>Innovative Pitch to Sell Award </span>
+       <span class="award">Innovative Pitch to Sell Award </span>
      </div> 
      </div>
 
