changed centres to centre

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <img src="./src/assets/images/guidance.png" alt="" height="100%" width="100%" />
                     </div>
                     <div class="card-details">
-                        <h4>Incubation Centres</h4>
+                        <h4>Incubation Centre</h4>
                         <p>
                             To provide start-ups with technical assistance, infrastructure, and a variety of other resources that may be needed for the start-up to survive and scale.
                        </p>
