logo fixed and link updated

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -68,8 +68,7 @@
             <div class="home-wrapper">
                 <!-- Hero Image -->
                 <div class="hero-img">
-                    <img src="./src/assets/icon/project pillar logo final black with name.png" alt="" height="100%"
-                        width="75%">
+                    <img src="./src/assets/svg/project_pillar_logo_black.svg" alt="" height="100%" width="100%">
                 </div>
                 <!-- Count Down to Event  -->
                 <div class="counter-wrapper">
@@ -271,7 +270,7 @@
                             and essential
                             documentation.
                         </p>
-                        <div class="button"><a href="https://ppillar.pages.dev/" target="_blank"
+                        <div class="button"><a href="https://form.ecellsakec.in/" target="_blank"
                                 rel="noopener noreferrer" class="btn">Register
                                 Now</a> </div>
                     </section>
