added core tteam photos

--- a/team/index.html
+++ b/team/index.html
@@ -99,7 +99,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="front">
-                            <img class="profile" width="100%" src="gallery/teamphotos/ashish2.png" alt="ashish">
+                            <img class="profile" width="100%" src="gallery/Core Team/Ashish.png" alt="ashish">
                             <h2>Ashish Shetty</h2>
                         </div>
                         <div class="back">
@@ -128,7 +128,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="front">
-                            <img class="profile" width="100%" src="gallery/teamphotos/ashish2.png" alt="ashish">
+                            <img class="profile" width="100%" src="gallery/Core Team/Manav.png" alt="manav">
                             <h2>Manav Khimani</h2>
                         </div>
                         <div class="back">
@@ -156,35 +156,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="front">
-                            <img class="profile" width="100%" src="gallery/teamphotos/ashish2.png" alt="ashish">
-                            <h2>Ashish Shetty</h2>
-                        </div>
-                        <div class="back">
-                            <h2>Ashish Shetty</h2>
-                            <h3>BE</h3>
-                            <ul class="social-icon">
-                                <li><a href="" target="_blank">
-                                    <ion-icon name="logo-github"></ion-icon></i>
-                                    </a></li>
-                                <li><a href="" target="_blank">
-                                        <ion-icon name="logo-linkedin"></ion-icon>
-                                    </a></li>
-                            </ul>
-                            <!-- <h3>PSG | BRA</h3> -->
-                            <!-- <img class="tem-img" src="https://github.com/free-source-code-bd/all-public-resource/blob/main/psg.jpg?raw=true" alt=""> &nbsp;
-            <img class="tem-img" src="https://github.com/free-source-code-bd/all-public-resource/blob/main/bra.jpg?raw=true" alt="">  <br> -->
-                            <p class="des">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, in animi doloribus
-                                reprehenderit debitis voluptas pariatur eaque! Rem, accusamus tempora?
-                            </p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="content">
-                        <div class="front">
-                            <img class="profile" width="100%" src="gallery/teamphotos/ashish2.png" alt="ashish">
+                            <img class="profile" width="100%" src="gallery/Core Team/Kush.png" alt="kush">
                             <h2>Kush Vora</h2>
                         </div>
                         <div class="back">
@@ -212,7 +184,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="front">
-                            <img class="profile" width="100%" src="gallery/teamphotos/ashish2.png" alt="ashish">
+                            <img class="profile" width="100%" src="gallery/Core Team/Sanjana.png" alt="Sanjana">
                             <h2>Sanjana</h2>
                         </div>
                         <div class="back">
@@ -239,35 +211,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="front">
-                            <img class="profile" width="100%" src="gallery/teamphotos/ashish2.png" alt="ashish">
-                            <h2>Siddhant</h2>
-                        </div>
-                        <div class="back">
-                            <h2>Siddhant</h2>
-                            <h3>BE</h3>
-                            <ul class="social-icon">
-                                <li><a href="" target="_blank">
-                                    <ion-icon name="logo-github"></ion-icon></i>
-                                    </a></li>
-                                <li><a href="" target="_blank">
-                                        <ion-icon name="logo-linkedin"></ion-icon>
-                                    </a></li>
-                            </ul>
-                            <!-- <h3>PSG | BRA</h3> -->
-                            <!-- <img class="tem-img" src="https://github.com/free-source-code-bd/all-public-resource/blob/main/psg.jpg?raw=true" alt=""> &nbsp;
-            <img class="tem-img" src="https://github.com/free-source-code-bd/all-public-resource/blob/main/bra.jpg?raw=true" alt="">  <br> -->
-                            <p class="des">
-                                The most creative, and innovative person who can work seamlessly to make sure that
-                                things happen properly.
-                            </p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="content">
-                        <div class="front">
-                            <img class="profile" width="100%" src="gallery/teamphotos/ashish2.png" alt="ashish">
+                            <img class="profile" width="100%" src="gallery/Core Team/Vibha.png" alt="vibha">
                             <h2>Vibha</h2>
                         </div>
                         <div class="back">
@@ -295,35 +239,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="front">
-                            <img class="profile" width="100%" src="gallery/teamphotos/ashish2.png" alt="ashish">
-                            <h2>Prathik</h2>
-                        </div>
-                        <div class="back">
-                            <h2>Prathik</h2>
-                            <h3>BE</h3>
-                            <ul class="social-icon">
-                                <li><a href="" target="_blank">
-                                    <ion-icon name="logo-github"></ion-icon></i>
-                                    </a></li>
-                                <li><a href="" target="_blank">
-                                        <ion-icon name="logo-linkedin"></ion-icon>
-                                    </a></li>
-                            </ul>
-                            <!-- <h3>PSG | BRA</h3> -->
-                            <!-- <img class="tem-img" src="https://github.com/free-source-code-bd/all-public-resource/blob/main/psg.jpg?raw=true" alt=""> &nbsp;
-            <img class="tem-img" src="https://github.com/free-source-code-bd/all-public-resource/blob/main/bra.jpg?raw=true" alt="">  <br> -->
-                            <p class="des">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, in animi doloribus
-                                reprehenderit debitis voluptas pariatur eaque! Rem, accusamus tempora?
-                            </p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="content">
-                        <div class="front">
-                            <img class="profile" width="100%" src="gallery/teamphotos/ashish2.png" alt="ashish">
+                            <img class="profile" width="100%" src="gallery/teamphotos/ishan2.png" alt="ishan">
                             <h2>Ishan Kadam</h2>
                         </div>
                         <div class="back">
