link vunerable proofed

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -408,17 +408,21 @@
         </div>
         <div class="footer-ecell">
             <div class="social-media">
-                <a class="social-media-cont" href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y">
+                <a class="social-media-cont" target='_blank' rel='noopener noreferrer'
+                    href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y">
                     <i class="bi bi-instagram "></i>
                 </a>
-                <a class="social-media-cont" href="https://m.facebook.com/100410025256433/">
+                <a class="social-media-cont" target='_blank' rel='noopener noreferrer'
+                    href="https://m.facebook.com/100410025256433/">
                     <!-- <a href=""></a> -->
                     <i class="bi bi-facebook"></i>
                 </a>
-                <a class="social-media-cont" href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ">
+                <a class="social-media-cont" target='_blank' rel='noopener noreferrer'
+                    href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ">
                     <i class="bi bi-youtube"></i>
                 </a>
-                <a class="social-media-cont" href="https://www.linkedin.com/showcase/e-cell-sakec">
+                <a class="social-media-cont" target='_blank' rel='noopener noreferrer'
+                    href="https://www.linkedin.com/showcase/e-cell-sakec">
                     <i class="bi bi-linkedin"></i>
                 </a>
             </div>
