teams page social links

--- a/team/index.html
+++ b/team/index.html
@@ -511,12 +511,12 @@
                             <h2>Nikhil Pangaonkar</h2>
                             <ul class="social-icon">
                                 <li>
-                                    <a href=""  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+                                    <a href="https://www.instagram.com/nikhil091002/"  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
                                 </li>
                                 <!-- <li><a href="" target="_blank">
                                     <ion-icon name="logo-github"></ion-icon></i>
                                     </a></li> -->
-                                <li><a href="" target="_blank">
+                                <li><a href="https://www.linkedin.com/in/nikhil-pangaonkar-125632215/" target="_blank">
                                         <ion-icon name="logo-linkedin"></ion-icon>
                                     </a></li>
                             </ul>
@@ -546,12 +546,12 @@
                             <h2>Amar</h2>
                             <ul class="social-icon">
                                 <li>
-                                    <a href="" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+                                    <a href="https://www.instagram.com/amarchouhan1709/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
                                 </li>
                                 <!-- <li><a href="" target="_blank">
                                     <ion-icon name="logo-github"></ion-icon></i>
                                     </a></li> -->
-                                <li><a href="" target="_blank">
+                                <li><a href="https://www.linkedin.com/in/amar-chouhan-8a1989215/" target="_blank">
                                         <ion-icon name="logo-linkedin"></ion-icon>
                                     </a></li>
                             </ul>
@@ -576,7 +576,7 @@
                 </div>
                 <div class="mcard">
                     <div class="content">
-                        <img class="profile" width="100%" src="gallery/team/shreyansh.png" alt="shreyansh">
+                        <img class="profile" width="100%" src="gallery/team/shreyans.png" alt="shreyans">
                             <h2>Shreyans Chheda</h2>
                             <ul class="social-icon">
                                 <li>
@@ -597,12 +597,12 @@
                             <h2>Aditya Pyati</h2>
                             <ul class="social-icon">
                                 <li>
-                                    <a href=""  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+                                    <a href="https://www.instagram.com/pyatiii/"  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
                                 </li>
                                 <!-- <li><a href="" target="_blank">
                                     <ion-icon name="logo-github"></ion-icon></i>
                                     </a></li> -->
-                                <li><a href="" target="_blank">
+                                <li><a href="https://www.linkedin.com/in/aditya-pyati-a9243519b/" target="_blank">
                                         <ion-icon name="logo-linkedin"></ion-icon>
                                     </a></li>
                             </ul>
@@ -683,12 +683,12 @@
                             <h2>Aryan Pal</h2>
                             <ul class="social-icon">
                                 <li>
-                                    <a href=""  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+                                    <a href="https://instagram.com/aryan_03_?igshid=YmMyMTA2M2Y="  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
                                 </li>
                                 <!-- <li><a href="" target="_blank">
                                     <ion-icon name="logo-github"></ion-icon></i>
                                     </a></li> -->
-                                <li><a href="" target="_blank">
+                                <li><a href="https://www.linkedin.com/in/aryan-pal-74aa5a205" target="_blank">
                                         <ion-icon name="logo-linkedin"></ion-icon>
                                     </a></li>
                             </ul>
@@ -752,7 +752,7 @@
                             <h2>Krisha Shah</h2>
                             <ul class="social-icon">
                                 <li>
-                                    <a href=""  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+                                    <a href="https://www.instagram.com/kayyie20/"  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
                                 </li>
                                 <!-- <li><a href="" target="_blank">
                                     <ion-icon name="logo-github"></ion-icon></i>
@@ -805,12 +805,12 @@
                             <h2>Geetanjali</h2>
                             <ul class="social-icon">
                                 <li>
-                                    <a href=""  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+                                    <a href="https://www.instagram.com/geeeeetanjali/"  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
                                 </li>
                                 <!-- <li><a href="" target="_blank">
                                     <ion-icon name="logo-github"></ion-icon></i>
                                     </a></li> -->
-                                <li><a href="" target="_blank">
+                                <li><a href="https://www.linkedin.com/in/geetanjali-sahoo-7ab993200/" target="_blank">
                                         <ion-icon name="logo-linkedin"></ion-icon>
                                     </a></li>
                             </ul>
