--- a/team/index.html
+++ b/team/index.html
@@ -703,7 +703,7 @@
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="gallery/team/amey.png" alt="amey">
-                            <h2>Amey</h2>
+                            <h2>Amey </h2>
                             <ul class="social-icon">
                                 <li>
                                     <a href=""  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
@@ -771,7 +771,7 @@
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="gallery/team/aryan_y.png" alt="aryan_y">
-                            <h2>Aryan</h2>
+                            <h2>Aryan Yadav</h2>
                             <ul class="social-icon">
                                 <li>
                                     <a href=""  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
@@ -789,7 +789,7 @@
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="gallery/team/harsh.png" alt="harsh">
-                            <h2>Harsh</h2>
+                            <h2>Harsh Patadia</h2>
                             <ul class="social-icon">
                                 <li>
                                     <a href=""  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
@@ -862,12 +862,12 @@
                             <h2>Prathamesh V</h2>
                             <ul class="social-icon">
                                 <li>
-                                    <a href="https://www.instagram.com/geeeeetanjali/"  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+                                    <a href=""  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
                                 </li>
                                 <!-- <li><a href="" target="_blank">
                                     <ion-icon name="logo-github"></ion-icon></i>
                                     </a></li> -->
-                                <li><a href="https://www.linkedin.com/in/geetanjali-sahoo-7ab993200/" target="_blank">
+                                <li><a href="" target="_blank">
                                         <ion-icon name="logo-linkedin"></ion-icon>
                                     </a></li>
                             </ul>
