fixed navbar and hero section

--- a/events/index.html
+++ b/events/index.html
@@ -82,9 +82,9 @@
                     href="https://music.amazon.in/podcasts/414fb720-24ed-4c12-90bf-05ded48178fc/epitome-of-leaders?ref=dm_sh_RyfO52I8BmyNw4e06ZIoNOrbq "><img
                         src='./img/amusic.webp' class="podcast-icons"></a>
             </div>
-            <!-- <p class="read-more ">
-                <a href="# " target="_blank ">Read More <i class="bi bi-arrow-right-short " style="color: green; "></i></a>
-            </p> -->
+            <p class="read-more ">
+                <a href="../podcast/index.html" target="_blank ">Read More <i class="bi bi-arrow-right-short " style="color: green; "></i></a>
+            </p>
         </div>
     </div>
     <div class="blog-card alt">
