podcast page changes

--- a/podcast/index.html
+++ b/podcast/index.html
@@ -61,12 +61,16 @@
     <article>
       <section class="hero-section">
           <div class="hero-card">
-              <img src="" alt="">
-              <h5>Sumer rajpurohit</h5>
+            <div class="img-cont">
+              <img src="./assets/images/ep1-img.png" alt="" class="hero-img-1">
+            </div>
+            <h5>Sumer rajpurohit</h5>
           </div>
           <div class="hero-card">
-              <img src="" alt="">
-              <h5>Shridhar mankar</h5>
+            <div class="img-cont">
+              <img src="./assets/images/ep2-img.png" alt="" class="hero-img-2">
+            </div>
+            <h5>Shridhar mankar</h5>
           </div>
           <div class="hero-card"><img src="" alt="">
           <h5>Shridhar mankar</h5></div>
