--- a/podcast/index.html
+++ b/podcast/index.html
@@ -49,8 +49,8 @@
     </div>
 
     <ul class="links">
-        <li> <a href="#home">Home </a> </li>
-        <li> <a href="./events/index.html">Events </a> </li>
+        <li> <a href="../index.html">Home </a> </li>
+        <li> <a href="../events/index.html">Events </a> </li>
         <li> <a href="#about">Episodes</a> </li>
         <li> <a href="#objective">Newsletter</a> </li>
         <li> <a href="#testimony">Testimony</a> </li>
@@ -68,7 +68,7 @@
 
   <main>
 
-    <!-- <article>
+    <article>
       <section class="hero-section">
           <div class="hero-card">
             <div class="img-cont">
@@ -85,7 +85,7 @@
           <div class="hero-card"><img src="" alt="">
           <h5>Shridhar mankar</h5></div>
       </section>
-    </article> -->
+    </article>
 
     <article class="container">
 
@@ -154,6 +154,7 @@
       -->
 
       <section class="podcast" id="podcast">
+        
         <ul class="podcast-list">
 
           <li>
