event page- our Initiatives section added

--- a/events/index.html
+++ b/events/index.html
@@ -118,6 +118,13 @@
         </div>
       </div>
       </section>
+
+
+      
+  <section class="hed">
+    <h1>Our Initiatives</h1>
+  </section>
+  
     
       <section class="event4">
         <div class="women">
