spelling mistake fix

--- a/events/index.html
+++ b/events/index.html
@@ -88,7 +88,7 @@
           </div>
     
         <div class="sharktank_info">
-          <h1 class="sharktank_title">Project Piller</h1>
+          <h1 class="sharktank_title">Project Pillar</h1>
           <p>
             E-Cell SAKEC organised Shark Tank even before Shark Tank was officially aired in India in 2020 where we
                     encouraged students to start their own business venture as well as invited budding startups and gave
